infra/k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8000
